Finish HTML and CSS for left-hand cards in main content.

--- a/index.html
+++ b/index.html
@@ -144,7 +144,137 @@
           </div>
         </div>
       </div>
-      <div class="cards"></div>
+      <!--Cards/Main Content-->
+
+      <div class="main">
+        <div class="left-cards">
+          <div class="card">
+            <p class="title">Super Cool Project</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Less Cool Project</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Impossible App</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Easy Peasy App</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Ad Blocker</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+          <div class="card">
+            <p class="title">Money Maker</p>
+            <p class="left-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+            <div class="card-icons">
+              <img src="./images/star-plus.svg" alt="star-plus" height="25" />
+              <img src="./images/eye-plus.svg" alt="eye-plus" height="25" />
+              <img src="./images/share.svg" alt="share" height="25" />
+            </div>
+          </div>
+        </div>
+        <div class="right-cards">
+          <div class="top-right-card right-card card">
+            <div class="maintenance">
+              <p class="a-title"></p>
+              <p>Site Maintenance</p>
+              <p class="right-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud...
+              </p>
+            </div>
+            <hr />
+            <div class="community">
+              <p class="a-title"></p>
+              <p>Community Share Day</p>
+              <p class="right-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud...
+              </p>
+            </div>
+            <hr />
+
+            <div class="update-privacy">
+              <p class="a-title"></p>
+              <p>Updated Privacy Policy</p>
+              <p class="right-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud...
+              </p>
+            </div>
+          </div>
+
+          <div class="right-card card">
+            <p class="title">Trending</p>
+            <div class="trending-container"></div>
+            <div class="trending-container"></div>
+            <div class="trending-container"></div>
+            <div class="trending-container"></div>
+            <p class="right-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud...
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
