Finish project with completing trending card.

--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
 
       <div class="main">
         <div class="left-cards">
+          <p class="projects-title">Your Projects</p>
+
           <div class="card">
             <p class="title">Super Cool Project</p>
             <p class="left-text">
@@ -229,6 +231,8 @@
         </div>
         <div class="right-cards">
           <div class="top-right-card right-card card">
+            <p class="announcements-title">Announcements</p>
+
             <div class="maintenance">
               <p class="a-title"></p>
               <p>Site Maintenance</p>
@@ -261,17 +265,57 @@
             </div>
           </div>
 
-          <div class="right-card card">
-            <p class="title">Trending</p>
-            <div class="trending-container"></div>
-            <div class="trending-container"></div>
-            <div class="trending-container"></div>
-            <div class="trending-container"></div>
-            <p class="right-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-              enim ad minim veniam, quis nostrud...
-            </p>
+          <div class="bottom-right-card right-card card">
+            <p class="trending-title">Trending</p>
+
+            <div class="trending-container">
+              <img
+                src="./images/bilal.png"
+                alt="bilal"
+                height="50"
+                class="trending-pfp"
+              />
+              <div class="trending-text">
+                <div class="tag">@Shadowstrik8r</div>
+                <div class="bio">PalAte CEO</div>
+              </div>
+            </div>
+            <div class="trending-container">
+              <img
+                src="./images/bilal.png"
+                alt="bilal"
+                height="50"
+                class="trending-pfp"
+              />
+              <div class="trending-text">
+                <div class="tag">@Shadowstrik8r</div>
+                <div class="bio">PalAte CEO</div>
+              </div>
+            </div>
+            <div class="trending-container">
+              <img
+                src="./images/bilal.png"
+                alt="bilal"
+                height="50"
+                class="trending-pfp"
+              />
+              <div class="trending-text">
+                <div class="tag">@Shadowstrik8r</div>
+                <div class="bio">PalAte CEO</div>
+              </div>
+            </div>
+            <div class="trending-container">
+              <img
+                src="./images/bilal.png"
+                alt="bilal"
+                height="50"
+                class="trending-pfp"
+              />
+              <div class="trending-text">
+                <div class="tag">@Shadowstrik8r</div>
+                <div class="bio">PalAte CEO</div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
